[package]
name = "sqlite_parser"
version = "0.1.8"
authors = ["Jasper <Jasperav@hotmail.com>"]
edition = "2018"
description = "Parse SQLite databases"
readme = "README.md"
keywords = ["SQLite", "parse"]
license = "MIT/Apache-2.0"
repository = "https://github.com/Jasperav/SQLiteParser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]